[metadata]
name = unet
version = 0.1.0
description = Brain MRI segmentation with Unet network
long_description = file: README.md LICENSE
keywords = one, two
license = Apache License
classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: Apache License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
platforms = any



[options]
package = unet
packages = find:
install_requires =
    onnx==1.10.1
    onnxruntime==1.9.0
    torch==1.8.2
    torchvision==0.9.2 
    torchaudio==0.8.2
    python==3.8.0
    pytorch-lightning==1.4.5
    opencv-python==4.4.0.46
    opencv-python-headless==4.5.1.48
    fire==0.4.0

include_package_data = True